feat: add controller user and update swagger
